// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Switch component should be disabled 1`] = `
<DocumentFragment>
  <label
    class="switch"
  >
    <input
      disabled=""
      type="checkbox"
      value=""
    />
    <span
      class="check"
    />
    <span
      class="control-label"
    >
      Text
    </span>
  </label>
</DocumentFragment>
`;

exports[`Switch component should have info color classname 1`] = `
<DocumentFragment>
  <label
    class="switch"
  >
    <input
      type="checkbox"
      value=""
    />
    <span
      class="check is-info"
    />
    <span
      class="control-label"
    >
      Text
    </span>
  </label>
</DocumentFragment>
`;

exports[`Switch component should have medium classname 1`] = `
<DocumentFragment>
  <label
    class="switch"
  >
    <input
      type="checkbox"
      value=""
    />
    <span
      class="check is-medium"
    />
    <span
      class="control-label"
    >
      Text
    </span>
  </label>
</DocumentFragment>
`;

exports[`Switch component should render 1`] = `
<DocumentFragment>
  <label
    class="switch"
  >
    <input
      type="checkbox"
      value=""
    />
    <span
      class="check"
    />
    <span
      class="control-label"
    >
      Text
    </span>
  </label>
</DocumentFragment>
`;
